--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,22 @@
 	    <artifactId>commons-lang</artifactId>
 	    <version>2.2</version>
 	</dependency>
+	<!-- Primefaces -->
 	<dependency>
 		<groupId>org.primefaces</groupId>
 		<artifactId>primefaces</artifactId>
 		<version>6.2</version>
 	</dependency>
+	<dependency>
+        <groupId>org.primefaces.extensions</groupId>
+        <artifactId>primefaces-extensions</artifactId>
+        <version>6.1.1</version>
+    </dependency>          
+    <dependency>
+        <groupId>org.primefaces.extensions</groupId>
+        <artifactId>resources-codemirror</artifactId>
+        <version>6.1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>stockExchangeAggregator</finalName>
