--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,9 +55,9 @@
 		<mime-type>application/x-font-woff2</mime-type>
 	</mime-mapping>
 
-	<!-- <context-param> -->
-	<!-- <param-name>primefaces.THEME</param-name> -->
-	<!-- <param-value>none</param-value> -->
-	<!-- </context-param> -->
+	<context-param>
+	    <param-name>primefaces.THEME</param-name>
+	    <param-value>ui-lightness</param-value>
+	</context-param>
 
 </web-app>
